--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
